# ForgeLab

./: .env.example  .gitignore  README.md  agent_personas.yaml  benchmark_registry.yaml  model_defaults.yaml  pyproject.toml
benchmark/: sample_tasks.py  tasks.json
demo/: arrow-bug-1148.json  setup.sh
docs/: MVP_PITCH.md  MVP_PITCH_V2.md  demo.html
docs/specs/: 2026-05-28-testforge-multi-agent-redesign.md  future-features.md
docs/superpowers/plans/: 2026-05-29-forgelab-v2.md  2026-06-06-small-model-diff-robustness.md
docs/superpowers/specs/: 2026-05-28-forgelab-v2-single-model-persona-design.md  2026-06-01-forgelab-benchmark-design.md  2026-06-06-small-model-diff-robustness-design.md
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: AgentPanel.tsx  ChatArea.tsx  DetailsPanel.tsx  TopBar.tsx
frontend/src/hooks/: useWorkflow.ts
src/forgelab/: api.py  baseline.py  benchmark_runner.py  cli.py  demo_server.py  executor.py  graph.py  llm.py  models.py  patch_applier.py  state.py
src/forgelab/agents/: architect.py  base.py  (+6 more)
tests/: test_api.py  test_base_agent.py  test_baseline.py  test_benchmark_cli.py  test_benchmark_runner.py  test_coder.py  test_demo_cli.py  test_demo_server.py  test_evaluator.py  test_executor.py  test_graph.py  test_llm.py  test_patch_applier.py  test_router.py
wiki/: README.md  agent-personas.md  agents.md  api-protocol.md  architecture.md  backend-implementation.md  cli.md  config.md  executor.md  frontend.md  graph.md  implementation-status.md  llm-gateway.md  state.md
(+22 files in other folders)
