[project]
name = "forgelab"
version = "0.1.0"
description = "Multi-agent software engineering team with benchmark-optimal model routing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=13.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.50.0",
    "playwright>=1.48.0",
    "docker>=7.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
forgelab = "forgelab.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7.0",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forgelab"]

[tool.hatch.build.targets.wheel.force-include]
"src/forgelab/personas" = "forgelab/personas"

[tool.ruff]
target-version = "py312"
line-length = 100
